# AuRA-Discovery

./: .env.example  .gitignore  CS668_Midterm_Presentation.pptx  README.md  build_ddi_dataset.py  ingest_research.py  process_with_validation.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_stage4_llm_predictions.py  stage7_full_evaluation.py  tasks_completed.md  train_baseline_models.py  train_graph_model.py  train_graph_model_improved.py  train_hybrid_fusion_pipeline.py  train_hybrid_model.py  train_hybrid_stacked_improved.py  train_stage6_hybrid.py  train_traditional_models.py  ~$CS668_Midterm_Presentation.pptx
Technical Paper/: Technical Draft#1.tex
artifacts/models/: champion_model.joblib  feature_pipeline.joblib  graph_champion.joblib  graph_feature_bundle.joblib  graph_improved_champion.joblib  graph_improved_feature_bundle.joblib  graph_improved_logreg.joblib  graph_improved_xgb.joblib  graph_logreg.joblib  graph_xgb.joblib  hybrid_feature_bundle.joblib  hybrid_xgb.joblib  logreg_smote.joblib  logreg_weighted.joblib  stage6_hybrid_xgb.joblib  stage6_late_fusion_bundle.joblib  staged_hybrid_bundle.joblib  traditional_feature_pipeline.joblib  traditional_logreg.joblib  traditional_xgb.joblib  xgb_smote.joblib  xgb_weighted.joblib  xgboost_smote.joblib
artifacts/predictions/: stage4_llm_predictions.jsonl
reports/: hybrid_stacked_comparison.md  stage7_model_comparison.md
src/: __init__.py  exceptions.py  factory.py  schema.py  state.py
src/agents/: __init__.py  discovery_agent.py  extractor.py  predictor.py
src/database/: __init__.py  (+1 more)
(+8 files in other folders)
